# gdb-mcp

./: .envrc  .gitignore  LICENSE  README.md  README.zh-CN.md  config.json  pyproject.toml
docs/: CHANGE_LOGS.md
docs/en-US/: CHANGE_LOGS.md
docs/zh-CN/: SETUP.md
examples/: USAGE.md  crash.c
scripts/: build_examples.sh
src/gdb_mcp/: __init__.py  __main__.py  cli.py  exceptions.py  gdb_manager.py  gdb_session.py  install.py  parsing.py  server.py  settings.py
tests/: test_cli.py  test_install.py  test_manager_integration.py  test_manager_unit.py  test_mcp_stdio_integration.py  test_parsing.py  test_server.py  test_server_response_shape.py  test_session.py
